--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"phpish/http": "dev-master",
-		"phpish/link_header": "dev-master",
+		"phpish/link_header": "dev-master"
 	},
 	"autoload": {
 		"files": ["webmention.php"]
