--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"phpish/http": "dev-master",
-		"phpish/link_header": "dev-master"
+		"phpish/http": "v1.0.0",
+		"phpish/link_header": "v1.0.0"
 	},
 	"autoload": {
 		"files": ["webmention.php"]
